--- a/1.5/Common/Languages/English/Keyed/Letters.xml
+++ b/1.5/Common/Languages/English/Keyed/Letters.xml
@@ -14,4 +14,7 @@
     <LetterLabelGeneGaveAbility>New ability: {0}</LetterLabelGeneGaveAbility>
     <LetterGeneGaveAbility>{0} has acquired a new ability: {1}.\n\n{2}\n\nCause: {3}</LetterGeneGaveAbility>
 
+    <!-- Fleshbeast mutation -->
+    <MessageGeneCausedMutation>{PAWN_labelShort}'s {1} has mutated into a {2}.</MessageGeneCausedMutation>
+
 </LanguageData>
