Add fleshbeast regeneration
- Add regeneration functionality to mutant regeneration gene
- Remove logging
- Add .user files to gitignore
- Remove capitalization from mutation messages

--- a/1.5/Common/Languages/English/Keyed/Letters.xml
+++ b/1.5/Common/Languages/English/Keyed/Letters.xml
@@ -17,4 +17,7 @@
     <!-- Fleshbeast mutation -->
     <MessageGeneCausedMutation>{PAWN_labelShort}'s {1} has mutated into a {2}.</MessageGeneCausedMutation>
 
+    <!-- Fleshbeast regeneration -->
+    <MessageGeneMutantRegeneration>{PAWN_labelShort}'s damaged {1} has regenerated into a {2}.</MessageGeneMutantRegeneration>
+
 </LanguageData>
